# aceai

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  agent.ipynb  demo.py  design.md  main.py  makefile  mkdocs.yml  nohup.out  note.md  pyproject.toml  term_ui.py
.agent/skills/aceai-ghostty-launch/: SKILL.md
.agent/skills/aceai-ghostty-launch/agents/: openai.yaml
.agent/skills/aceai-ghostty-launch/scripts/: open_aceai_ghostty.sh
.agent/skills/aceai-real-e2e/: SKILL.md
.agent/skills/aceai-real-e2e/agents/: openai.yaml
.agent/skills/aceai-real-e2e/scripts/: run_real_agent_query.py
.agent/skills/aceai-release/: SKILL.md
.agent/skills/aceai-release/references/: release-message.md
.agent/skills/aceai-tui-screenshot/: SKILL.md
.agent/skills/aceai-tui-screenshot/agents/: openai.yaml
.agent/skills/aceai-tui-screenshot/scripts/: drive_and_capture_aceai.sh
.github/workflows/: ci.yml  docs.yml
.ipynb_checkpoints/: agent-checkpoint.ipynb
aceai/: CHANGELOG.md  __init__.py  agent.py  errors.py  event_bus.py  events.py  executor.py  interface.py  models.py  skill.py
aceai/agent/: __init__.py  ace_agent.py  app.py  base.py  citations.py  config.py  context_checkpoint_store.py  context_history.py  context_manager.py  cost.py  event_store.py  events.py  executor.py  ideas.py  permissions.py  project.py  provider_auth.py  provider_catalog.py  provider_catalog.yaml  references.py  session.py  session_service.py  session_views.py  tui_adapter.py
aceai/agent/features/: __init__.py  delegation.py  patch.py  repo.py  tools.py
aceai/agent/gui/: __init__.py  cli.py  server.py
aceai/agent/memory/: __init__.py  context_checkpoint_store.py  context_history.py  ideas.py  subagent_artifacts.py
aceai/agent/tui/: __init__.py  __main__.py  app.py  cli.py  config.py  cost.py  demo.py  events.py  metadata.py  runner.py  session_adapter.py  session_replay.py  setup.py  state.py  theme.py  tool_stats.py  trajectory.py
aceai/agent/tui/widgets/: __init__.py  approval.py  detail.py  input.py  status.py  stream.py  subagents.py  timeline.py  topbar.py
aceai/core/: __init__.py  agent.py  base.py  cache.py  context_manager.py  events.py  executor.py  models.py  output_truncation.py  run_loop.py  run_state.py  skills.py
aceai/core/helpers/: string.py  time.py
aceai/core/tools/: __init__.py  _tool_sig.py  schema_generator.py  tool.py
aceai/helpers/: delta_buffer.py
aceai/llm/: __init__.py  anthropic.py  deepseek.py  errors.py  interface.py  models.py  openai.py  openai_codex.py  service.py  tool_spec.py
aceai/llm/tracing/: __init__.py
aceai/tools/: __init__.py  _param.py  _tool_sig.py  base.py  builtin_tools.py  interface.py  param.py  registry.py  schema_generator.py  tool.py
aceai/tui/: app.py  cli.py  config.py  demo.py  events.py  runner.py  setup.py  state.py  theme.py
aceai/tui/widgets/: __init__.py  detail.py  input.py  stream.py  timeline.py
apps/agent/: Makefile  pyproject.toml
apps/agent/src/agent_core/: __init__.py  ace_agent.py  app.py  citations.py  config.py  cost.py  event_store.py  provider_auth.py  provider_catalog.py  references.py  session.py  session_service.py  session_views.py  tui_adapter.py  update_check.py
apps/agent/src/agent_core/builtin_skills/: __init__.py
apps/agent/src/agent_core/features/: delegation.py  patch.py  repo.py  tools.py
apps/agent/src/agent_core/features/skills/developer/: SKILL.md
apps/agent/src/agent_core/memory/: context_checkpoint_store.py  context_history.py  ideas.py  subagent_artifacts.py
apps/agent/src/agent_core/tui/: app.py  cli.py  config.py  demo.py  events.py  runner.py  session_adapter.py  session_display.py  session_replay.py  setup.py  state.py  theme.py  tool_stats.py  trajectory.py
apps/agent/src/agent_core/tui/widgets/: __init__.py  approval.py  detail.py  input.py  status.py  stream.py  subagents.py
apps/gui/: openapi.json  package-lock.json  package.json
apps/gui/src/: App.tsx  protocol.ts  styles.css
apps/web/backend/: Makefile  pyproject.toml
apps/web/backend/src/: __init__.py  cli.py  server.py
apps/web/frontend/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
apps/web/frontend/src/: App.tsx  main.tsx  protocol.ts  styles.css
docs/: FAQ.md  features.md  index.md  introduction.md  performance.md  providers.md  tui.md  tutorial.md
examples/: logistics_agent_demo.py  terminal_ui.py  tui_live_runner.py  tui_static_demo.py
scripts/: migrate_session_payloads.py  release.py
spec/: agent_app_tooling_sources.md  agent_layer.md  agent_run_architecture.md  context_checkpoint_persistence.md  context_compaction_boundaries.md  context_span.md  diagnostic_report.md  langfuse_intgegration.md  layer_boundary_review_2026_05_09.md  learning_center.md  llm_response_contract.md  multi_agent_threads.md  multimodal_support.md  pyright_error_inventory.md  reasoning_summary.md  streaming_reasoning.md  subagent_result_artifact_plan.md  subagent_runtime_repair_plan.md  tool_call_concurrency.md  tui.md  tui_boundary_phased_plan.md
tests/: conftest.py  test_ace_agent.py  test_agent.py  test_agent_app.py  test_agent_behavior.py  test_agent_delegation.py  test_agent_patch_tools.py  test_agent_session.py  test_anthropic_provider.py  test_builtin_tools.py  test_context_checkpoint.py  test_deepseek_provider.py  test_distribution_smoke.py  test_executor.py  test_gui_server.py  test_ideas.py  test_in_memory_cache.py  test_interface_utils.py  test_llm_interface.py  test_llm_service.py  test_openai_provider.py  test_package_boundaries.py  test_param.py  test_project.py  test_provider_catalog.py  test_registry_agent_integration.py  test_release_script.py  test_schema_generator.py  test_session_payload_migration.py  test_skill.py  test_skill_agent_integration.py  test_subagent_artifacts.py  test_tool.py  test_tool_registry.py  test_trace_parenting.py  test_tui_cli.py  test_tui_config.py  test_tui_events.py  test_tui_runner.py  test_tui_session_adapter.py  (+3 more)
tests/e2e/: test_delegation_live_e2e.py  test_skill_live_e2e.py
