[project]
name = "aceai"
dynamic = ["version"]
description = "AI agent framework that delivers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ididi>=1.8.4",
    "msgspec>=0.20.0",
    "opentelemetry-api>=1.39.1",
    "typing-extensions>=4.15.0",
]
authors = [{ name = "raceychan", email = "raceychan@gmail.com" }]

[project.optional-dependencies]
otel = [
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aceai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aceai"]

[dependency-groups]
dev = [
    "openai>=2.9.0",
    "dotenv>=0.9.9",
    "hatch>=1.16.1",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.0",
    "loguru>=0.7.3",
    "gitpython>=3.1.44",
    "packaging>=24.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "twine>=5.0.0",
    "pyright>=1.1.407",
    "rich>=14.2.0",
    "langfuse>=3.11.2,<4",
]

[tool.pytest.ini_options]
markers = ["debug: marks tests intended for focused debugging runs"]
