[project]
name = "aceai"
dynamic = ["version"]
description = "AI agent framework that delivers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ididi>=1.8.4",
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "openai>=2.9.0",
    "opentelemetry-api>=1.39.1",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
]
authors = [{ name = "raceychan", email = "raceychan@gmail.com" }]

[project.optional-dependencies]
otel = [
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
]
tui = [
    "rich>=14.2.0",
    "sqlalchemy>=2.0",
    "textual>=8.2.5",
]

[project.scripts]
aceai = "aceai.agent.tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aceai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aceai"]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "hatch>=1.16.1",
    "jupyterlab>=4.5.0",
    "loguru>=0.7.3",
    "gitpython>=3.1.44",
    "packaging>=24.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "twine>=5.0.0",
    "pyright>=1.1.407",
    "langfuse>=3.11.2,<4",
    "pandas>=2.3.3",
    "np>=1.0.2",
    "openpyxl>=3.1.5",
    "polars>=1.37.1",
    "matplotlib>=3.10.8",
    "fastexcel>=0.19.0",
    "pyarrow>=23.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "rich>=14.2.0",
    "textual>=8.2.5",
    "sqlalchemy>=2.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/e2e"
markers = [
    "debug: marks tests intended for focused debugging runs",
    "e2e: marks end-to-end tests that should be run explicitly",
    "live_llm: marks end-to-end tests that call a real LLM provider",
]
