[project]
name = "agent-core"
version = "0.0.0"
description = "AceAI application layer"
requires-python = ">=3.12"
dependencies = [
    "aceai>=0.2.29",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.0.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0",
    "textual>=8.2.5",
]

[project.scripts]
aceai = "agent_core.tui.cli:main"
"agent_core.tui.demo" = "agent_core.tui.demo:main"
"agent_core.tui.trajectory_demo" = "agent_core.tui.demo:trajectory_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

[tool.uv.sources]
aceai = { path = "../..", editable = true }
